Check point.  Kind of working, but getting weird 'revert' runtime error from Ganache

--- a/src/susu.html
+++ b/src/susu.html
@@ -28,7 +28,9 @@
     </div>
 
     <div class="row">
-        <!-- PETS LOAD HERE -->
+        <button class="btn btn-default btn-confirmPurchase" type="button" data-id="0">confirmPurchase</button>
+        <button class="btn btn-default btn-abort" type="button" data-id="0">abort</button>
+        <button class="btn btn-default btn-confirmReceived" type="button" data-id="0">confirmReceived</button>
     </div>
 </div>
 
