--- a/src/susu.html
+++ b/src/susu.html
@@ -28,9 +28,11 @@
     </div>
 
     <div class="row">
-        <button class="btn btn-default btn-confirmPurchase" type="button" data-id="0">confirmPurchase</button>
-        <button class="btn btn-default btn-abort" type="button" data-id="0">abort</button>
-        <button class="btn btn-default btn-confirmReceived" type="button" data-id="0">confirmReceived</button>
+        <!--<button class="btn btn-default btn-setMe" type="button" data-id="0">Set Me As Recipient</button>-->
+        <button class="btn btn-default btn-send" type="button" data-id="0">Send Moolah</button>
+        <!--<button class="btn btn-default btn-getRecip" type="button" data-id="0">Get Recipient</button>-->
+        <!--<button class="btn btn-default btn-getMoolah" type="button" data-id="0">Print Moolah</button>-->
+        <!--<button class="btn btn-default btn-giveMoolah" type="button" data-id="0">GIVE Moolah</button>-->
     </div>
 </div>
 
